docs: added collecttion postman
